--- a/server/package.json
+++ b/server/package.json
@@ -2,21 +2,25 @@
   "name": "server02",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start:dev": "npx nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.4.2",
+    "@shelf/jest-mongodb": "^4.1.6",
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "jest": "^29.4.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -24,13 +28,17 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.4.0",
     "axios": "^1.3.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongodb-memory-server": "^8.11.4",
     "mongoose": "^6.9.0",
     "socket.io": "^4.5.4",
-    "ts-dotenv": "^0.9.0"
+    "supertest": "^6.3.3",
+    "ts-dotenv": "^0.9.0",
+    "ts-jest": "^29.0.5"
   }
 }
