--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-typescript": "^7.20.0",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
     "chart.js": "^4.2.0",
     "framer-motion": "^9.0.1",
+    "jest-fetch-mock": "^3.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -24,14 +24,16 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
+    "setimmediate": "^1.0.5",
     "socket.io-client": "^4.5.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -51,5 +53,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@jest/globals": "^29.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.4.2",
+    "canvas": "^2.11.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.4.2",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.0.5"
+  },
+  "moduleFileExtensions": [
+    "js",
+    "ts",
+    "tsx"
+  ]
 }
