--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "socket.io": "^4.5.4",
     "supertest": "^6.3.3",
     "ts-dotenv": "^0.9.0",
-    "ts-jest": "^29.0.5"
+    "ts-jest": "^29.0.5",
+    "xml-js": "^1.6.11"
   }
 }
